# mech-comp-aid

./: AGENT.md  LICENSE  README.md  agent.md  pyproject.toml
Lab2_code/: code1.py  code2.py  code3.py  code4.py  code5.py  code6.py  implicit.py  lab2_summary.md  metamorphoses.py
Lab2_code/stl_files/: head.stl  transformers 2 Phone.STL
Lab3_code/: ansysAPDL.txt
pinn_playground/: README.md  __init__.py
pinn_playground/backend/: __init__.py  cli.py  fem_geometry.py  fem_solver.py  main.py  physics_env.py  pinn_model.py  problem_definition.py  training.py
pinn_playground/doc/: PINN_plan.md  fem_plan.md  teacher_guided_pinn_plan.md
pinn_playground/doc/changelog/: 2026-04-13_checkpoint-shell-and-fem.md  2026-04-15_frontend-teaching-refresh.md  2026-04-16_aligning-pinn-to-fem-physics.md  2026-04-17_pinn-accuracy-fix-and-fem-comparison.md  2026-04-23_pinn-fourier-resampling-and-cache-refresh.md  2026-04-24_teacher-guided-pinn-and-load-patch-insight.md
pinn_playground/frontend/: api.js  app.js  checkpoint-rules.js  index.html  numerical-cell.js  pinn-cell.js  plots.js  progress-state.js  shell.js  style.css
project1/: README.md
project1/exercise1-1/: report1-1.md  visSTL.py
project1/exercise1-2/: periodic_surfaces.py  report1-2.md
project1/exercise1-3/: implicit.py  report1-3.md
