[project]
name = "mech-comp-aid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "numpy-stl>=3.2.0",
    "pyvista>=0.47.1",
    "rich>=14.3.3",
    "scikit-image>=0.26.0",
    "typer>=0.24.1",
]
