[project]
name = "mech-comp-aid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "numpy-stl>=3.2.0",
    "pyvista>=0.47.1",
    "rich>=14.3.3",
    "scikit-fem[all]>=12.0.1",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
